# air-quality-samples-backend-FastAPI

./: main.py  nixpacks.toml  pyproject.toml  requirements.txt
.postman/: api
apps/db_save/: models.py  routers.py
apps/db_save/values/: locations.py
config/: settings.py
postman/collections/: Entering Measurements.json
postman/schemas/: index.json
