[tool.poetry]
name = "receiver"
version = "0.1.0"
description = ""
authors = ["Nathan Solis <66754842+colderinit@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Jinja2 = "^3.1.2"
fastapi = {extras = ["all"], version = "^0.88.0"}
uvicorn = "^0.20.0"
motor = "^3.1.1"
pydantic = "^1.10.2"
dnspython = "^2.2.1"
black = "^22.12.0"
isort = "^5.11.3"
pylint = "^2.15.9"
pip-tools = "^6.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
